--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +10,13 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="conteiner">
         <h1>Lista de anotações</h1>
-        <input class="form-input" type="text">
+        <div class="input-box">
+            <input class="form-input" type="text">
+        </div>
         <button id="btn-save">Salvar</button>
         <div class="resultado">
             <!-- <div class="item">
@@ -20,9 +24,10 @@
                 <i class="far fa-times-circle"></i>
             </div> -->
         </div>
-        <p id="total">Total: 0</p> 
+        <p id="total">Total: 0</p>
         <button id="btn">Apagar Todos</button>
     </div>
 </body>
-    <script src="main.js"></script>
+<script src="main.js"></script>
+
 </html>
