--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -16,13 +15,11 @@
         <h1>Lista de anotações</h1>
         <div class="input-box">
             <input class="form-input" type="text">
+            <i id="error-icon" class="fa-solid fa-circle-exclamation"></i>
         </div>
         <button id="btn-save">Salvar</button>
         <div class="resultado">
-            <!-- <div class="item">
-                <p>Sua anotação</p>
-                <i class="far fa-times-circle"></i>
-            </div> -->
+            
         </div>
         <p id="total">Total: 0</p>
         <button id="btn">Apagar Todos</button>
